used percentages, fixed an overflow issue

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,9 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 480px;
-    padding-left: 480px;
+    padding-right: 20%;
+    padding-left: 20%;
+    gap: 50%;
 }
 
 .header a{
@@ -50,40 +51,45 @@ ul, ul a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 80px;
-    padding-top: 80px;
+    padding-bottom: 5%;
+    padding-top: 5%;
     background-color: #1F2937;
-    padding-right: 480px;
-    padding-left: 480px;
+    padding-right: 20%;
+    padding-left: 20%;
+    gap: 240px;
+    flex-shrink: 0;
+    max-width: 70%;
 }
 
 h1 {
     font-size: 48px;
     font-weight: bold;
     color: #F9FAF8;
+    margin-top: 0;
+    padding: 0;
 }
 
 .secondary-txt {
     font-size: 18px;
     color: #E5E7EB;
-    max-width: 400px;
-    max-height: 300px;
+    max-width: 30%;
 }
 
 .description button {
     background-color: #3882F6;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
     color: #F9FAF8;
     font-weight: bold;
     border-radius: 12px;
-    margin-top: 5px;
 }
 
 .description img {
     max-height: 250px;
+    min-width: 520px;
+    border-radius: 10px;
 }
 
 .illustration-section h2 {
@@ -98,7 +104,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 48px;
+    padding: 4%;
     gap: 60px;
 }
 
@@ -117,7 +123,6 @@ h1 {
 
 .illustration {
     max-width: 135px;
-    padding-bottom: 48px;
 }
 
 .quote-section {
@@ -135,7 +140,7 @@ h1 {
     font-style: italic;
     color: #1F2937;
     flex-direction: column;
-    padding-top: 80px;
+    padding-top: 5%;
 }
 
 .author {
@@ -143,7 +148,7 @@ h1 {
     justify-content: right;
     font-weight: bold;
     padding-top: 0;
-    padding-bottom: 80px;
+    padding-bottom: 5%;
 }
 
 .banner-section {
@@ -153,19 +158,23 @@ h1 {
     background-color: #3882F6;
     color: white;
     border-radius: 10px;
-    margin-left: 480px;
-    margin-right: 480px;
-    margin-bottom: 80px;
-    margin-top: 80px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    gap: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    max-width: 70%;
 }
 
 .banner-section button {
-    margin-left: 20px;
+    margin-left: 1%;
     background-color: #3882F6;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     border-radius: 10px;
     border-color: white;
     color: white;
@@ -177,7 +186,7 @@ h1 {
 
 .footer {
     font-size: 14px;
-    padding: 28px;
+    padding: 1.5%;
     display: flex;
     justify-content: center;
     background-color: #1F2937;
